<resources>
    <string name="app_name">BBOut</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Create New Account</string>
    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
    <string name="title_activity_cart">CartActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="clear_cart">Clear Cart</string>


    <!--String for payment Details-->
    <string name="CardNumber">Card Number</string>
    <string name="Save">Save Details</string>
    <string name="NameonCard">Name on Card</string>
    <string name="CVV">CVV</string>
    <string name="ExpiryMonth">Expiry Month</string>
    <string name="ExpiryYear">Expiry Year</string>
    <string name="SavethisCardforfasterpayment">Save this Card for faster payment</string>
    <string name="Last3digitsprintedonthebackofthecard">Last 3 digits printed on the back of the card</string>
    <string name="EnteryourCardNumber">Enter your Card Number</string>
    <string name="EnterNameonCard">Enter Name on Card</string>
    <string name="EnterCVV">Enter CVV</string>

    <string-array name="month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="year">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>

    </string-array>
    <string name="title_activity_order_status">OrderStatus</string>
    <string name="order_placed_message">Order Placed Successfully!</string>
    <string name="title_activity_location_change">LocationChange</string>

</resources>
