<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    tools:context=".activity.PaymentUserDetailsActivity">
    <!--android:paddingTop="60dp">-->


    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tx_cardNo"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/chk_Save"
                android:layout_marginTop="67dp"
                android:text="@string/CardNumber" />

            <EditText
                android:id="@+id/tx_inputCardNo"
                android:layout_width="341dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="93dp"
                android:drawableLeft="@drawable/ic_payment"
                android:ems="10"
                android:hint="Enter your Card Number"
                android:inputType="textPersonName"
                android:text="9969165789" />

            <Button
                android:id="@+id/btn_Pay"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="63dp"
                android:background="@drawable/button_bg_rounded_corners"
                android:text="@string/Save" />

            <TextView
                android:id="@+id/tx_NameCard"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/tx_cardNo"
                android:layout_marginTop="151dp"
                android:text="@string/NameonCard" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tx_Month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"

                    android:layout_alignParentTop="true"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="249dp"
                    android:text="@string/ExpiryMonth" />

                <Spinner
                    android:id="@+id/spn_month"
                    android:layout_width="81dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/tx_Month"
                    android:layout_marginEnd="139dp">

                </Spinner>
            </RelativeLayout>

            <TextView
                android:id="@+id/tx_Year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/tx_cardNo"
                android:layout_centerVertical="true"
                android:text="@string/ExpiryYear" />

            <Spinner
                android:id="@+id/spn_year"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/chk_Save"
                android:layout_centerVertical="true">

            </Spinner>


            <TextView
                android:id="@+id/tx_CCV"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tx_CCVMessage"
                android:layout_alignStart="@+id/tx_inputCardNo"
                android:text="@string/CVV" />

            <CheckBox
                android:id="@+id/chk_Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="172dp"
                android:layout_marginStart="39dp"
                android:text="@string/SavethisCardforfasterpayment" />



            <EditText
                android:id="@+id/tx_InputCardName"
                android:layout_width="339dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="179dp"
                android:drawableLeft="@drawable/ic_person"
                android:ems="10"
                android:hint="Enter Name on Card"
                android:inputType="textPersonName"
                android:text="Supreetha Ganapathi" />

            <TextView
                android:id="@+id/tx_CCVMessage"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/btn_Pay"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="223dp"
                android:text="@string/Last3digitsprintedonthebackofthecard" />


            <EditText
                android:id="@+id/tx_InputCCV"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tx_CCVMessage"
                android:layout_alignParentStart="true"
                android:layout_marginStart="80dp"
                android:ems="10"
                android:hint="@string/EnterCVV"
                android:inputType="numberPassword"
                android:text="123" />




        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="?attr/colorPrimary"
            android:orientation="vertical">




            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="SafeWay"
                android:textSize="24sp" />

        </LinearLayout>


    </FrameLayout>

</RelativeLayout>